readme changes, need to change links

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         crossorigin="anonymous"></script>
 
 
-    <title>DevChallenges</title>
+    <title>Image Upload API</title>
 
 
     <style>
