all commits except soln

--- a/templates/display_image.html
+++ b/templates/display_image.html
@@ -172,7 +172,7 @@
 
 
         <div class="display_url">
-            <p class="url_box" id="theurl">127.0.0.1:5000/show/{{file_name}}</p>
+            <p class="url_box" id="theurl">harshithimage.herokuapp.com/show/{{file_name}}</p>
             <div onclick="copy_to_clipboard()" class="choose-btn">Copy Link</div>
         </div>
 
