--- a/templates/index.html
+++ b/templates/index.html
@@ -450,7 +450,7 @@
 
                 let img_name;
 
-                fetch("http://127.0.0.1:5000/upload/drop", {
+                fetch("harshithimage.herokuapp.com/upload/drop", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({
