Final Changes for heroku

--- a/templates/display_image.html
+++ b/templates/display_image.html
@@ -12,7 +12,7 @@
     <!-- <script src="https://use.fortawesome.com/349cfdf6.js"></script> -->
 
     <script src="https://kit.fontawesome.com/7c9f01f1a5.js" crossorigin="anonymous"></script>
-    <title>DevChallenges</title>
+    <title>Image Upload API</title>
 
 
     <style>
