fetch problem resolved

--- a/templates/index.html
+++ b/templates/index.html
@@ -450,7 +450,7 @@
 
                 let img_name;
 
-                fetch("harshithimage.herokuapp.com/upload/drop", {
+                fetch("/upload/drop", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({
